plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'

}
//Added for JDK
tasks.withType(JavaCompile).configureEach{options.fork = true
    options.forkOptions.jvmArgs +=[
            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']}
android {
    compileSdk 31

    defaultConfig {
        applicationId "com.example.barberstaffapplication"
        minSdk 21
        targetSdk 31
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation 'com.google.android.material:material:1.4.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4' //removed in part13 (leave here first)
//    implementation 'com.google.firebase:firebase-firestore:24.4.0'
    implementation 'com.google.firebase:firebase-firestore:24.8.1'

    implementation 'com.google.firebase:firebase-messaging-ktx:23.2.1'
//    implementation 'com.google.firebase:firebase-storage:16.1.0'
//    implementation 'com.google.firebase:firebase-auth:16.2.1'
    implementation 'com.google.firebase:firebase-storage:20.2.1'
    implementation 'com.google.firebase:firebase-auth:22.1.2'
    implementation 'com.google.firebase:firebase-storage-ktx:20.2.1'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'

    implementation 'com.jakewharton:butterknife:10.0.0'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
    implementation 'com.github.d-max:spots-dialog:1.1@aar'

    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
    implementation 'io.paperdb:paperdb:2.6'
    implementation 'com.google.code.gson:gson:2.8.5'

    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'

    implementation 'com.squareup.picasso:picasso:2.71828'
    implementation 'com.karumi:dexter:5.0.0'
}
apply plugin: 'com.google.gms.google-services'